--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,23 +1,18 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+@import url("https://fonts.googleapis.com/css2?family=Pridi:wght@300&display=swap");
 
-html,
-body {
-  padding: 0;
+*,
+*::after,
+*::before {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
-  scroll-behavior: smooth;
-}
-
-a {
-  color: inherit;
-  text-decoration: none;
-}
-
-* {
+  padding: 0;
   box-sizing: border-box;
+}
+
+html {
+  scroll-behavior: smooth;
 }
 
 @font-face {
@@ -31,12 +26,26 @@ a {
 
 @layer components {
   .link {
-    @apply mx-4 mr-5 text-base font-normal transition duration-300 ease-in-out cursor-pointer hover:underline hover:text-blue-600;
+    @apply mx-0 mr-5 text-base font-normal text-transparent transition duration-300 ease-in-out cursor-pointer md:mx-4 bg-clip-text bg-gradient-to-r from-purple-300 to-red-300 hover:from-red-300 hover:to-purple-300;
   }
   .button {
-    @apply inline-flex items-center px-3 py-2 mt-4 text-base transition duration-300 ease-in-out border-2 border-blue-500 rounded hover:bg-blue-400 hover:border-white hover:text-white focus:outline-none md:mt-0;
+    @apply inline-flex items-center px-3 py-2 mt-4 text-base text-transparent transition duration-300 ease-in-out border-2 border-transparent border-purple-400 rounded-md hover:border-red-400 md:mt-0 bg-clip-text bg-gradient-to-r from-purple-300 to-red-300 hover:from-red-300 hover:to-purple-300;
   }
   .section {
-    @apply flex items-center justify-center min-h-screen px-16 text-white bg-black lg:px-52;
+    @apply flex items-center justify-center min-w-full px-16 text-white bg-black sm:px-8 lg:px-52;
   }
+  .heading {
+    @apply text-transparent cursor-pointer bg-clip-text bg-gradient-to-r from-purple-300 to-red-300 hover:from-red-300 hover:to-purple-300;
+  }
+  .contactLink {
+    @apply flex items-center justify-center space-x-4 pridi md:space-x-8;
+  }
+}
+
+.pridi {
+  font-family: "Pridi", serif;
+}
+
+.gradient {
+  background: linear-gradient(to right, #f6d365 0%, #fda085 100%);
 }
