--- a/styles/globals.css
+++ b/styles/globals.css
@@ -26,19 +26,22 @@ html {
 
 @layer components {
   .link {
-    @apply mx-0 mr-5 text-base font-normal text-transparent transition duration-300 ease-in-out cursor-pointer md:mx-4 bg-clip-text bg-gradient-to-r from-purple-300 to-red-300 hover:from-red-300 hover:to-purple-300;
+    @apply mx-2 text-sm font-normal text-transparent transition duration-300 ease-in-out cursor-pointer md:mx-4 md:text-base bg-clip-text bg-gradient-to-r from-purple-300 to-red-300 hover:from-red-300 hover:to-purple-300;
   }
   .button {
     @apply inline-flex items-center px-3 py-2 mt-4 text-base text-transparent transition duration-300 ease-in-out border-2 border-transparent border-purple-400 rounded-md hover:border-red-400 md:mt-0 bg-clip-text bg-gradient-to-r from-purple-300 to-red-300 hover:from-red-300 hover:to-purple-300;
   }
   .section {
-    @apply flex items-center justify-center min-w-full px-16 text-white bg-black sm:px-8 lg:px-52;
+    @apply flex items-center justify-center min-w-full px-6 text-white bg-black md:px-16 sm:px-8 lg:px-52;
   }
   .heading {
     @apply text-transparent cursor-pointer bg-clip-text bg-gradient-to-r from-purple-300 to-red-300 hover:from-red-300 hover:to-purple-300;
   }
   .contactLink {
-    @apply flex items-center justify-center space-x-4 pridi md:space-x-8;
+    @apply flex items-center justify-center space-x-4 text-lg pridi md:space-x-8;
+  }
+  .heading {
+    @apply p-3 my-32 text-3xl border-b-2 border-white;
   }
 }
 
